fixed mobile display bugs

--- a/restraunt.html
+++ b/restraunt.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta name="viewport" content="width=device-width; initial-scale=1">
     <meta charset="UTF-8" />
     <title>Pushkin rest</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -104,8 +105,7 @@
       class="container d-flex navmenu"
       style="
         justify-content: flex-start;
-        align-items: center;
-        height: 80px;"
+        align-items: center;"
     >
       <a href="#tab1" id="menu1" class="menua" onclick="changecolor.call(this)">Закуски</a>
       <a href="#tab2" class="menua" onclick="changecolor.call(this)">Салаты</a>
@@ -159,7 +159,7 @@
       <h2 style="margin: 0px 0px 50px 12px">Салаты</h2>
       <div
         class="container gridcont"
-        style="display: grid; grid-template-columns: 1fr 1fr; gap: 40px 30px"
+        style="display: grid"
       >
         <div class="meal">
           <span class="mealname">Салатище</span>
@@ -202,7 +202,7 @@
       <h2 style="margin: 0px 0px 50px 12px">Супы</h2>
       <div
         class="container gridcont"
-        style="display: grid; grid-template-columns: 1fr 1fr; gap: 40px 30px"
+        style="display: grid; "
       >
         <div class="meal">
           <span class="mealname">Сельдь на бородинском хлебе</span>
@@ -235,7 +235,7 @@
       <h2 style="margin: 0px 0px 50px 12px">Горячие блюда</h2>
       <div
         class="container gridcont"
-        style="display: grid; grid-template-columns: 1fr 1fr; gap: 40px 30px"
+        style="display: grid;"
       >
         <div class="meal">
           <span class="mealname">Сельдь на бородинском хлебе</span>
@@ -283,7 +283,7 @@
       <h2 style="margin: 0px 0px 50px 12px">Гарниры</h2>
       <div
         class="container gridcont"
-        style="display: grid; grid-template-columns: 1fr 1fr; gap: 40px 30px"
+        style="display: grid; "
       >
         <div class="meal">
           <span class="mealname">Сельдь на бородинском хлебе</span>
@@ -322,7 +322,7 @@
       <h2 style="margin: 0px 0px 50px 12px">Десерты</h2>
       <div
         class="container gridcont"
-        style="display: grid; grid-template-columns: 1fr 1fr; gap: 40px 30px"
+        style="display: grid; "
       >
         <div class="meal">
           <span class="mealname">Сельдь на бородинском хлебе</span>
